Add auth spec
